# resume_llm_analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
backend/: api.py  job_scout.py  llama_service.py  local_model_service.py  resume_parser.py  sagemaker_service.py  skill_matcher.py  test_deepseek.py  test_llama_3_8b_instruct.py  test_prompt.py  test_replicate_llama.py
backend/FT_llm/: api.py  inference.py  test_inference.py  train.py  utils.py
deploy/: deploy_endpoint.py  ec2_setup.sh  test_endpoint.py
docs/: SAGEMAKER_DEPLOYMENT.md  deployment_guide.md
frontend/: app.py  app_v1.py  app_v2.py  test.py
inference_check/: app.py  modal_inference.py  nebius_service.py
prompts/: prompt_2.txt  prompt_3.txt  resume_analysis_prompt.txt  tailor_for_job_prompt.txt
